# tailoring-grade_anthropometric_Python_tool

./: .gitignore  README.md  output_sample1.json  pyproject.toml  requirements.txt
models/smplx/: PLACE_MODEL_FILES_HERE.txt
tailorvision/: __init__.py  __main__.py  config.py  exceptions.py  pipeline.py  schema.py
tailorvision/api/: __init__.py  cli.py
tailorvision/fit/: __init__.py  anthropometric_prior.py  body_model_adapter.py  pose_fit_engine.py
tailorvision/input/: __init__.py  loader.py  preprocessor.py  validator.py
tailorvision/measure/: __init__.py  measurement_engine.py  uncertainty.py
tailorvision/quality/: __init__.py  quality_reporter.py
tailorvision/scale/: __init__.py  scale_recovery_engine.py
tailorvision/tailor/: __init__.py  ease_tables.py  tailoring_mapper.py
tailorvision/vision/: __init__.py  keypoint_lifter.py  pose_estimator.py  segmentor.py
tests/: conftest.py  test_keypoint_lifter.py  test_pose_estimator.py  test_preprocessor.py  test_quality_reporter.py  test_scale_recovery.py  test_schema.py  test_tailoring_mapper.py  test_validator.py
